Fixed login/logout positioning in the dashboard so it's not centered.

--- a/static/manageprogram/add_program_component_style.css
+++ b/static/manageprogram/add_program_component_style.css
@@ -17,9 +17,11 @@
     width: 80%;
     }
 
-.nav {
+
+.nav-pills.nav-wizard  {
   width: 650px;
 }
+
 .nav-pills.nav-wizard > li {
   position: relative;
   overflow: visible;
